fixed letter spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -124,6 +124,6 @@
   body {
     @apply bg-background text-foreground;
     line-height: initial !important;
-    letter-spacing: -0.025em;
+    letter-spacing: 0.01px;
   }
 }
